Add support for system look and feel + status system + allow chatting + database changes